--- a/Javascript/assets/css/style.css
+++ b/Javascript/assets/css/style.css
@@ -111,6 +111,12 @@
     font-display: swap;
 } 
 
+/* 초기 셋팅값*/
+:root {
+    --fontN: "nanumSquareNeo";
+    --fontG: "GmarketSans";
+}
+
 /* 여백 초기화 */
 * {
     padding: 0;
