--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -353,6 +353,8 @@ body {
     .layer__inner {
         .layer {
             .layer__conts {
+                background-color: #223167a8;
+
                 .picture {
                     ul {
                         li {
