--- a/Javascript/assets/css/style.css
+++ b/Javascript/assets/css/style.css
@@ -151,7 +151,7 @@ li {
 /* 가운데 영역 */
 .container {
     max-width: 1300px;
-    width: 100%;
+    width: 96%;
     margin: 0 auto;
 }
 
@@ -250,4 +250,21 @@ li {
 /* 푸터 */
 #footer {
     height: 400px;
+
+    .sample {
+        margin: 100;
+
+        h3 {
+            font-size: 24px;
+            font-family: var(--fontG);
+            margin-bottom: 10px;
+        }
+
+        p {
+            font-family: var(--fontN);
+            margin-bottom: 10px;
+            line-height: 1.5;
+            color: #666;
+        }
+    }
 }
