--- a/mysql/assets/css/style.css
+++ b/mysql/assets/css/style.css
@@ -257,5 +257,5 @@ li {
 
 .main__sample .sample .info a {
     color: #2b8fad;
-    text-decoration: underline;
+    df text-decoration: underline;
 }
