--- a/Javascript/assets/css/style.css
+++ b/Javascript/assets/css/style.css
@@ -155,116 +155,116 @@ li {
     margin: 0 auto;
 }
 
+
 /* 헤더 영역 */
 #header {
     text-align: center;
     padding: 40px;
     border-bottom: 1px dashed #dcdcdc;
+}
 
-    h1 {
-        margin-bottom: 20px;
+#header h1 {
+    margin-bottom: 20px;
+}
 
-        a {
-            font-family: var(--fontG);
-            font-size: 4vw;
-            color: #a723238c;
+#header h1 a {
+    font-family: var(--fontG);
+    font-size: 4vw;
+    color: #a723238c;
+}
 
-            @media (max-width: 800px) {
-                font-size: 30px;
-
-            }
-        }
+@media (max-width: 800px) {
+    #header h1 a {
+        font-size: 30px;
     }
+}
 
-    nav {
-        ul {
-            display: flex;
-            justify-content: center;
-            flex-wrap: wrap;
+#header nav ul {
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+}
 
-            li {
-                margin: 2px;
+#header nav ul li {
+    margin: 2px;
+}
 
-                a {
-                    font-family: var(--fontN);
-                    border: 1px solid #a723238c;
-                    padding: 10px 20px;
-                    display: inline-block;
-                    color: #a723238c;
-                }
-            }
-        }
-    }
+#header nav ul li a {
+    font-family: var(--fontN);
+    border: 1px solid #a723238c;
+    padding: 10px 20px;
+    display: inline-block;
+    color: #a723238c;
+}
+
+#header nav ul li.active a {
+    background-color: #a723238c;
+    color: #fff;
 }
 
 /* 메인 - 메뉴 */
 .main__menu {
     padding: 40px 0;
     border-bottom: 1px dashed #dcdcdc;
+}
 
-    ul {
-        li {
-            a {
-                color: #44238c;
-                line-height: 1.6;
-                font-family: var(--fontN);
+.main__menu ul li a {
+    color: #44238c;
+    line-height: 1.6;
+    font-family: var(--fontN);
+}
 
-                &:hover {
-                    text-decoration: underline;
-                    text-underline-position: under;
-                }
-            }
-        }
-    }
+.main__menu ul li a:hover {
+    text-decoration: underline;
+    text-underline-position: under;
 }
 
 /*메인 - 샘플 */
 .main__sample {
     padding: 40px 0;
+}
 
-    .sample {
-        margin-bottom: 100px;
+.main__sample .sample {
+    margin-bottom: 100px;
+}
 
-        h3 {
-            font-size: 24px;
-            font-family: var(--fontG);
-            margin-bottom: 10px;
-        }
+.main__sample .sample h3 {
+    font-size: 24px;
+    font-family: var(--fontG);
+    margin-bottom: 10px;
+}
 
-        p {
-            font-family: var(--fontN);
-            margin-bottom: 10px;
-            line-height: 1.5;
-            color: #666;
-        }
+.main__sample .sample p {
+    font-family: var(--fontN);
+    margin-bottom: 10px;
+    line-height: 1.5;
+    color: #666;
+}
 
-        .result {
-            font-family: var(--fontN);
-            line-height: 1.5;
-            color: #666;
-        }
-
-    }
+.main__sample .sample .result {
+    font-family: var(--fontN);
+    line-height: 1.5;
+    color: #666;
 }
 
 /* 푸터 */
 #footer {
     height: 400px;
+}
 
-    .sample {
-        margin: 100;
+#footer .sample {
+    margin: 100;
+}
 
-        h3 {
-            font-size: 24px;
-            font-family: var(--fontG);
-            margin-bottom: 10px;
-        }
+#footer .sample h3 {
+    font-size: 24px;
+    font-family: var(--fontG);
+    margin-bottom: 10px;
+}
 
-        p {
-            font-family: var(--fontN);
-            margin-bottom: 10px;
-            line-height: 1.5;
-            color: #666;
-        }
-    }
+#footer .sample p {
+    font-family: var(--fontN);
+    margin-bottom: 10px;
+    line-height: 1.5;
+    color: #666;
 }
