--- a/mysql/assets/css/style.css
+++ b/mysql/assets/css/style.css
@@ -174,6 +174,7 @@ li {
     text-align: center;
     padding: 40px;
     border-bottom: 1px dashed #dcdcdc;
+    margin-bottom: 40px;
 }
 
 #header h1 {
@@ -240,6 +241,7 @@ li {
     font-size: 20px;
     font-family: var(--fontG);
     margin-bottom: 10px;
+    margin-top: 50px;
     font-weight: 500px;
 }
 
