--- a/quiz/assets/css/quiz.css
+++ b/quiz/assets/css/quiz.css
@@ -198,6 +198,62 @@ body::after {
     line-height: 1.4;
 }
 
+.quiz__main .choices {
+    margin-bottom: 20px;
+}
+
+.quiz__main .choices label {
+    display: block;
+    width: 100%;
+}
+
+.quiz__main .choices label input {
+    position: absolute;
+    clip: rect(0 0 0 0);
+    width: 1px;
+    height: 1px;
+    margin: -1px;
+    overflow: hidden;
+}
+
+.quiz__main .choices label span {
+    border: 1px solid #000000;
+    padding: 17px;
+    display: flex;
+    margin-bottom: 10px;
+    border-radius: 3px;
+    font-size: 16px;
+    line-height: 1.5;
+    cursor: pointer;
+}
+
+.quiz__main .choices label span:hover {
+    border-color: #f1d75f;
+    color: #000000;
+    box-shadow: 1px 1px 5px #f1d75f;
+}
+
+.quiz__main .choices label span::before {
+    content: '';
+    width: 24px;
+    height: 24px;
+    border-radius: 50%;
+    box-shadow: inset 0 0 0 4px #f1d75f;
+    margin-right: 13px;
+    transition: 0.3s;
+}
+
+.quiz__main .choices label input:checked+span::before {
+    box-shadow: inset 0 0 0 9px #f1d75f;
+}
+
+.quiz__main .choices label input:checked+span {
+    border-color: #f1d75f;
+    color: #030302;
+    box-shadow: 1px 1px 5px #f1d75f;
+    background-color: #ffe77a2a;
+}
+
 .quiz__main .input input {
     width: 100%;
     padding: 20px;
@@ -212,7 +268,7 @@ body::after {
 .quiz__main .answer {
     border: 1px solid #000;
     padding: 20px;
-    background-color: #e6ff0131;
+    background-color: #fdf1ab;
     border-radius: 3px;
     font-size: 16px;
     color: #000;
@@ -241,7 +297,7 @@ body::after {
 /* quiz__footer */
 
 .quiz__footer .confirm {
-    background-color: #f1ff72d7;
+    background-color: #fdf1ab;
     color: #000;
     width: 100%;
     padding: 20px;
@@ -254,7 +310,7 @@ body::after {
 
 .quiz__footer .confirm:hover {
     background-color: transparent;
-    border: 1px dashed #e6f750;
+    border: 1px dashed #f1d75f;
     color: #000;
     cursor: pointer;
 }
