--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -117,14 +117,19 @@ body {
 
 /* main__icons */
 .main__icons {
+    display: flex;
+    flex-wrap: wrap;
+    margin-top: 20px;
+    justify-content: center;
+
     .icon {
-        width: 75px;
-        height: 75px;
+        width: 65px;
+        height: 65px;
         display: flex;
         align-items: center;
         justify-content: center;
         flex-direction: column;
-        margin: 30px;
+        margin: 10px;
         cursor: pointer;
         text-align: center;
 
@@ -366,4 +371,37 @@ body {
         }
 
     }
+}
+
+.member {
+    position: absolute;
+    left: 10px;
+    bottom: 10px;
+    text-align: center;
+    width: 100%;
+}
+
+.member ul {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+}
+
+.member li {
+    margin-bottom: 10px;
+    margin-right: 5px;
+    list-style: none;
+}
+
+.member img {
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    display: block;
+}
+
+.member a {
+    color: #fff;
+    text-decoration: none;
+    font-size: 12px;
 }
