--- a/Javascript/assets/css/style.css
+++ b/Javascript/assets/css/style.css
@@ -216,6 +216,14 @@ li {
     border-bottom: 1px dashed #dcdcdc;
 }
 
+.main__menu h2 {
+    font-size: 20px;
+    font-family: 'GmarketSans';
+    font-weight: 500;
+    margin-top: 30px;
+    margin-bottom: 10px;
+}
+
 .main__menu ul li a {
     color: #44238c;
     line-height: 1.6;
