--- a/effect/assets/css/style.css
+++ b/effect/assets/css/style.css
@@ -1,5 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
 
+
+
+
 * {
     margin: 0;
     padding: 0;
@@ -8,7 +11,7 @@
 
 a {
     text-decoration: none;
-    color: #ffffff;
+    color: rgb(182, 157, 157);
 }
 
 li {
@@ -16,7 +19,7 @@ li {
 }
 
 body {
-    background-color: #f7eaea;
+    background-color: #813d3d;
     width: 100%;
     height: 100vh;
     overflow: hidden;
@@ -38,13 +41,13 @@ body {
 }
 
 .header__inner {
-    border-top: 2px solid #fffdfd;
-    border-bottom: 1px solid #ffffff;
+    border-top: 2px solid #00000087;
+    border-bottom: 1px solid #0000006d;
 }
 
 #header h1 {
     font-family: 'Montserrat';
-    color: #ffffff;
+    color: #000000;
     font-weight: 300;
     font-size: 18px;
     padding: 10px 0;
@@ -62,8 +65,6 @@ body {
 
 #footer {
     width: 100%;
-    height: 60px;
-    /*background-color: rgba(255, 255, 255, 0.1);*/
 }
 
 .footer__inner {}
@@ -77,12 +78,17 @@ body {
 }
 
 .footer__inner ul li a {
-    border: 1px solid rgba(17, 34, 51, 0.575);
+    border: 1px solid rgba(63, 16, 16, 0.575);
     padding: 3px 10px;
     border-radius: 50px;
-    color: rgba(17, 34, 51, 0.589);
+    color: rgba(0, 0, 0, 0.589);
     display: inline-block;
     font-family: 'Montserrat';
     line-height: 1;
 
+}
+
+.footer__inner ul li.active a {
+    background-color: #d2d2d2;
+    color: #813d3d;
 }
